{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 19,
  "lineage": "59febe6e-58d4-7205-38e4-be1cd118b996",
  "resources": [
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:security-group/sg-0f5a15f71649862b0",
            "description": "Allow PostgreSQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5a15f71649862b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "qa-rds-jewelbench-sg",
            "name_prefix": "",
            "owner_id": "533267432349",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "qa-rds-jewelbench-sg"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-rds-jewelbench-sg",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6771036c8803303"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:security-group/sg-0d7914a641985531b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7914a641985531b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "qa-redis-jewelbench-sg",
            "name_prefix": "",
            "owner_id": "533267432349",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "qa-redis-jewelbench-sg"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-redis-jewelbench-sg",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6771036c8803303"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1664aa09c5f6e73",
            "arn": "arn:aws:ec2:us-east-1:533267432349:elastic-ip/eipalloc-0c1664aa09c5f6e73",
            "association_id": "eipassoc-0be73f54721f9f29b",
            "domain": "vpc",
            "id": "eipalloc-0c1664aa09c5f6e73",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ffc6eb618a63def0",
            "private_dns": "ip-10-100-1-71.ec2.internal",
            "private_ip": "10.100.1.71",
            "public_dns": "ec2-54-146-70-154.compute-1.amazonaws.com",
            "public_ip": "54.146.70.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "qa-nat-eip"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-nat-eip",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:internet-gateway/igw-0ec6d62f82b1def27",
            "id": "igw-0ec6d62f82b1def27",
            "owner_id": "533267432349",
            "tags": {
              "Name": "qa-internet-gateway"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-internet-gateway",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "vpc_id": "vpc-0d6771036c8803303"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1664aa09c5f6e73",
            "association_id": "eipassoc-0be73f54721f9f29b",
            "connectivity_type": "public",
            "id": "nat-0e07bad92865f61ef",
            "network_interface_id": "eni-0ffc6eb618a63def0",
            "private_ip": "10.100.1.71",
            "public_ip": "54.146.70.154",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c14a7c9512d6ed9a",
            "tags": {
              "Name": "qa-nat-gateway"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-nat-gateway",
              "Owner": "Team",
              "project": "jewelbench"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a6edb45c9806dc9a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e07bad92865f61ef",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a6edb45c9806dc9a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ec6d62f82b1def27",
            "id": "r-rtb-070c5019b31672daf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070c5019b31672daf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:route-table/rtb-0a6edb45c9806dc9a",
            "id": "rtb-0a6edb45c9806dc9a",
            "owner_id": "533267432349",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e07bad92865f61ef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qa-private-route-table"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-private-route-table",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6771036c8803303"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:route-table/rtb-070c5019b31672daf",
            "id": "rtb-070c5019b31672daf",
            "owner_id": "533267432349",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec6d62f82b1def27",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "qa-public-route-table"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-public-route-table",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6771036c8803303"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c071f973d46f2bbc",
            "route_table_id": "rtb-0a6edb45c9806dc9a",
            "subnet_id": "subnet-0a122fd1f37cb7916"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa20c8d35e6b40b4",
            "route_table_id": "rtb-0a6edb45c9806dc9a",
            "subnet_id": "subnet-0caa631ba36fd8490"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cbe67fb398ed8d2",
            "route_table_id": "rtb-0a6edb45c9806dc9a",
            "subnet_id": "subnet-00c831e0ce8f0c8f4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0809fc4b325ecee4b",
            "route_table_id": "rtb-070c5019b31672daf",
            "subnet_id": "subnet-0c14a7c9512d6ed9a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098006beabb520ad5",
            "route_table_id": "rtb-070c5019b31672daf",
            "subnet_id": "subnet-0c150f3d877ae70d5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070220d54d000d929",
            "route_table_id": "rtb-070c5019b31672daf",
            "subnet_id": "subnet-0cd987125df96ce52"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:subnet/subnet-0a122fd1f37cb7916",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a122fd1f37cb7916",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267432349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qa-private-subnet-1"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-private-subnet-1",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "vpc_id": "vpc-0d6771036c8803303"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:subnet/subnet-0caa631ba36fd8490",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caa631ba36fd8490",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267432349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qa-private-subnet-2"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-private-subnet-2",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "vpc_id": "vpc-0d6771036c8803303"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:subnet/subnet-00c831e0ce8f0c8f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c831e0ce8f0c8f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267432349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qa-private-subnet-3"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-private-subnet-3",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "vpc_id": "vpc-0d6771036c8803303"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:subnet/subnet-0c14a7c9512d6ed9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c14a7c9512d6ed9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267432349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qa-public-subnet-1"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-public-subnet-1",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "vpc_id": "vpc-0d6771036c8803303"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:subnet/subnet-0c150f3d877ae70d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c150f3d877ae70d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267432349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qa-public-subnet-2"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-public-subnet-2",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "vpc_id": "vpc-0d6771036c8803303"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:subnet/subnet-0cd987125df96ce52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd987125df96ce52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267432349",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "qa-public-subnet-3"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-public-subnet-3",
              "Owner": "Team",
              "project": "jewelbench"
            },
            "vpc_id": "vpc-0d6771036c8803303"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267432349:vpc/vpc-0d6771036c8803303",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0cb00619da806777b",
            "default_route_table_id": "rtb-0faf625bb578f0a9d",
            "default_security_group_id": "sg-08ec86c91bec8c4d3",
            "dhcp_options_id": "dopt-07362e80bd6302ed0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6771036c8803303",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0faf625bb578f0a9d",
            "owner_id": "533267432349",
            "tags": {
              "Name": "qa-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "qa",
              "Name": "qa-vpc",
              "Owner": "Team",
              "project": "jewelbench"
            }
          }
        }
      ]
    }
  ]
}